cluster/apps/stashapp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stash-ingress
  namespace: stash-ns
spec:
  rules:
    - host: "stash.capricorn.brendonmccool.com"  # Your hostname
      http:
        paths:
        # Path-based routing settings:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stash  # The name of the service
                port:
                  number: 9999  # Service Portnumber
